# fit-common

./: README.md  pyproject.toml
.github/workflows/: contract-tests.yml  integration-tests.yml  lint.yml  security-code.yml  security-deps.yml  type-check.yml  unit-tests.yml
fit_common/core/: __init__.py  acquisition_type.py  crash_handler.py  debug.py  error_handler.py  ffmpeg.py  paths.py  pdf_report_builder.py  utility.py  utils.py  versions.py
fit_common/gui/: clickable_label.py  dialog.py  error.py  multimedia.py  spinne.py  spinner.py  ui_multipurpose.py  ui_translation.py  utils.py
fit_common/lang/: __init__.py  en.json  it.json
fit_common/ui/: multipurpose.ui
tests/: conftest.py  test_core_paths.py  test_core_utils.py  test_core_versions.py  test_lang.py  test_pdf_report_builder.py
tests/contract/: test_contract_integrations.py  test_contract_pdf_report_builder.py  test_contract_public_api.py  test_contract_translations.py
tests/integration/: test_core_runtime_integration.py  test_lang_ui_translation_integration.py  test_pdf_report_builder_integration.py
tests/unit/: conftest.py  test_core_ffmpeg.py  test_core_logging_handlers.py  test_core_utils.py  test_core_versions.py  test_gui_multimedia.py  test_gui_ui_translation.py  test_gui_utils.py
