[tool.poetry]
name = "fit-common"
version = "1.0.0"
description = "Shared code between modules of the FIT project"
authors = ["Fit Project <info@fit-project.org>"]

packages = [{ include = "fit_common" }]

include = [
    "fit_assets/icons/info-circle.png",
    "fit_assets/templates/front.html",
    "fit_assets/templates/content.html",
    "fit_assets/images/logo-640x640.png",
    "fit_assets/images/spinner.gif",
]

[tool.poetry.dependencies]
windows-tools = { version = "^2.5.0", markers = "sys_platform == 'win32'" }

python = ">=3.11,<3.14"
PySide6 = "6.9.0"
ntplib = "^0.4.0"
packaging = "^25.0"
requests = "^2.32.4"
jinja2 = "^3.1.6"
pypdf = "^6.1.1"
xhtml2pdf = "^0.2.17"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
