[tool.poetry]
name = "fit-common"
version = "1.0.0-rc2"
description = "Shared code between modules of the FIT project"
authors = ["Fit Project <info@fit-project.org>"]

packages = [{ include = "fit_common" }]
exclude = ["fit_common/ui/**"]

include = [
    "fit_assets/icons/info-circle.png",
    "fit_assets/templates/front.html",
    "fit_assets/templates/content.html",
    "fit_assets/images/logo-640x640.png",
    "fit_assets/images/spinner.gif",
]

[tool.poetry.dependencies]
windows-tools = { version = "^2.5.0", markers = "sys_platform == 'win32'" }

python = ">=3.11,<3.14"
PySide6 = "6.9.0"
ntplib = "^0.4.0"
packaging = "^25.0"
requests = "^2.32.4"
jinja2 = "^3.1.6"
pypdf = "^6.1.1"
xhtml2pdf = "^0.2.17"
cryptography = ">=46.0.5"
pillow = ">=12.1.1"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "unit: fast isolated tests",
    "contract: cross-module contract tests for public interfaces and integrations",
    "integration: integration tests with real external resources and dependencies",
    "e2e: end-to-end UI workflow tests",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["F"]

[tool.mypy]
python_version = "3.11"
pretty = true
show_error_codes = true
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
files = ["fit_common/core", "fit_common/lang"]
exclude = ["^tests/"]

[[tool.mypy.overrides]]
module = ["fit_common.core.pdf_report_builder", "fit_common.core.__init__"]
ignore_errors = true

[tool.bandit]
targets = ["fit_common"]
exclude_dirs = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
